# DS-Ai-projects

Ai project/: main.py  pyproject.toml
data science project/Breast Cancer Prediction/: Breast Cancer Prediction.ipynb
data science project/Crop Yield Prediction/: crop yield prediction.ipynb
data science project/Diamond Price Prediction/: Diamond Price Prediction.ipynb
data science project/Indian Used Car Price Prediction/: Indian Used Car Price Prediction.ipynb
